bugfixes and enhancement